# caterpillar

./: Cargo.toml  README.md
worm2/: consts.rs  food.rs  game.rs  head.rs  main.rs  unit.rs  worm.rs
worm3/: consts.rs  food.rs  game.rs  lead.rs  main.rs  unit.rs  worm.rs
worm4/: consts.rs  food.rs  game.rs  main.rs  worm.rs
worm5/: consts.rs  food.rs  game.rs  lead.rs  main.rs  unit.rs  worm.rs
