[package]
name = "caterpillar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worm2"
path = "worm2/main.rs"

[[bin]]
name = "worm3"
path = "worm3/main.rs"

[[bin]]
name = "worm4"
path = "worm4/main.rs"

[[bin]]
name = "worm5"
path = "worm5/main.rs"

[dependencies]
egui   = "0.28.1"
eframe = "0.28.1"
rand   = "0.8.5"
ears   = "0.8.0"
